Adjusted the height of the decorative line in about section to prevent overlap with home content.

--- a/src/assets/styles/modules/_line.css
+++ b/src/assets/styles/modules/_line.css
@@ -103,6 +103,12 @@ $line_defaultThickness: 2px;
   &--extend {
     height: 150%;
   }
+  &--extend-less {
+    height: 130%;
+  }
+  &--extend-more {
+    height: 170%;
+  }
 
   &--short {
     height: 75%;
